cmake_minimum_required(VERSION 3.13)  # CMake version check
project(hashTables)               # Create project "simple_example"
set(CMAKE_CXX_STANDARD 17)

add_executable(test0 test0.cpp)
add_executable(test1 test1.cpp)
add_executable(test2 test2.cpp)
add_executable(test3 test3.cpp)
add_executable(MaxTester realMaxTester.cpp)